added logic for /me route in user service and changed some stuff in openapi.yaml
